--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
-* { margin: 0; padding: 0; box-sizing: border-box; }
+* { margin: 0; 
+  padding: 0; 
+  box-sizing: border-box; 
+}
 
 html, body {
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  scrollbar-width: none;
 }
 
 :root{
