Ver 4.9 (updated pie chart expand button)

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -522,8 +522,12 @@ body.dark-mode .btn-send img{
   filter: brightness(0) invert(1);
 }
 
-body.dark-mode .custom-tooltip, body.dark-mode .custom-tooltip-arrow {
+body.dark-mode .custom-tooltip, body.dark-mode .custom-tooltip-arrow{
   filter: brightness() invert(1);
+}
+
+body.dark-mode .expand-btn{
+  filter: brightness() invert(0.8);
 }
 
 body.dark-mode .kb-filter select {
