--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,7 @@ body.dark-mode .menu-toggle-icon {
 .theme-toggle {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-startf;
   gap: 12px;
   width: 100%;
   height: 45px;
@@ -324,7 +324,8 @@ body.dark-mode .theme-toggle::before {
   width: 30px;
   height: 30px;
   flex-shrink: 0;
-  background-image: url('assets/contrast.png');
+  background-image: url('assets/sun-svgrepo-com.svg');
+  filter: invert(1);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -413,7 +414,7 @@ body.dark-mode .main-content {
   box-shadow: 0 10px 28px rgba(0,0,0,0.45);
 }
 h1 {
-  font-size: 32px;
+  font-size: 28px;
   letter-spacing: 0.2px;
     align-items: flex-end;
 }
